# AegisNode

./: .gitignore  LICENSE  README.md  ROADMAP.md  live_integration_test.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
poa_core/: __init__.py  block.py  chain.py  identity.py
poa_langchain/: __init__.py  callback.py
research_data/: run_experiments.py
tests/: test_poa_core.py  test_poa_langchain.py
