[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisnode"
version = "0.1.0"
authors = [
  { name="Yashas", email="contact@example.com" },
]
description = "A Decentralized, Client-Side Audit Protocol for AI Agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pynacl>=1.5.0",
    "base58>=2.1.0",
    "langchain-core>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/yashasreddyyk/AegisNode"
"Bug Tracker" = "https://github.com/yashasreddyyk/AegisNode/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
include = ["poa_core*", "poa_langchain*"]
